# afgi

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements1.txt  setup.cfg  usage.py
data/files/tcl/: vcf.tcl
data/files/yaml/: fpv.yaml
docs/: reference.md
explanation/: index.html
how-to-guides/: index.html
reference/: index.html
search/: search_index.json
src/: ex_fpv.tcl  ex_fpv.yaml  fpv.yaml
src/afgi/: __init__.py  __main__.py  tcl_for_vcf.tcl  yaml_read.py
src/afgi/gui/: __init__.py  __main__.py  afgi-gui.py  frame.py  my_frame.py  run.py
src/afgi/run_tools/: __init__.py  __main__.py  run.py
src/afgi/translator/: translate_to_jg_tcl.py  translate_to_vcf_tcl.py  translator.py
src/afgi/yaml_to_tcl/: __init__.py  __main__.py  errors.py  fpv.yaml  load_yaml.py  tcl_gen.py  tcl_gen_jg.py  tcl_gen_vcf.py  utils.py
src/afgi/yaml_to_tcl/apps/jg/: fpv.py
src/afgi/yaml_to_tcl/apps/vcf/: aep.py  fca.py  fpv.py  frv.py
src/afgi/yaml_to_tcl/examples/: aep.tcl  aep.yaml  fca.tcl  fca.yaml  fpv.tcl  frv.yaml
tutorials/: index.html
