[metadata]
name = afgi
version = 1.0
author = Ajay Eeralla
author_email = ajay.eeralla@gmail.com
description = A package to run afi in GUI mode
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ajayeeralla/afgi
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

# inside setup.cfg:

[options]
packages = find:
package_dir =
    = src/afgi

[options.packages.find]
where = src/afgi
include = [run_tools, yaml_to_tcl, gui]